Added schema design.

--- a/Tasks/requirements.txt
+++ b/Tasks/requirements.txt
@@ -16,3 +16,7 @@ Requirements:
 9. Registration Form:
 	Email id:
 	Password
+
+Schema:
+	1. Task ( task, assignedBy, assignedTo, dateOfAssignment, dateOfCompletion, status )
+	2. User ( email, password )
